tests/NormalTests/paczka1/fuzzy1/49457851.err
Error in line 1: U9M30Rgso6Q S137 15,1
Error in line 7: fPloFr S137 69,1
Error in line 21: FjQ3yKmf S555 66,7
Error in line 24: U9M30Rgso6Q S555 50,6
Error in line 17: adWgGj A23 64,1
Error in line 34: U9M30Rgso6Q A186 -1,7
Error in line 35: adWgGj S137 55,2
Error in line 32: U9M30Rgso6Q A186 26,7
Error in line 36: adWgGj S555 97,7
